<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="#B8DCED"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="286dp"
        android:orientation="vertical"
        android:weightSum="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageview_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:contentDescription="@string/rssi_arrow"
                android:rotation="226"
                app:layout_constraintBottom_toBottomOf="@+id/imageview_legend"
                app:layout_constraintEnd_toEndOf="@+id/imageview_legend"
                app:layout_constraintStart_toStartOf="@+id/imageview_legend"
                app:layout_constraintTop_toTopOf="@+id/imageview_legend"
                app:srcCompat="@drawable/rssi_arrow" />

            <ImageView
                android:id="@+id/imageview_legend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="57dp"
                android:layout_marginLeft="57dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="57dp"
                android:layout_marginRight="57dp"
                android:contentDescription="@string/rssi_legend"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/rssi_legend" />

            <TextView
                android:id="@+id/textView_RSSI_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/default_rssi"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageview_legend"
                app:layout_constraintEnd_toEndOf="@+id/imageview_legend"
                app:layout_constraintStart_toStartOf="@+id/imageview_legend"
                app:layout_constraintTop_toTopOf="@+id/imageview_legend" />

            <TextView
                android:id="@+id/textView_RSSI_dbm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:gravity="center"
                android:text="@string/default_dbm"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageview_legend"
                app:layout_constraintEnd_toEndOf="@+id/imageview_legend"
                app:layout_constraintStart_toStartOf="@+id/imageview_legend"
                app:layout_constraintTop_toTopOf="@+id/imageview_legend" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="422dp"
        android:orientation="vertical"
        android:weightSum="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="117dp">

            <View
                android:id="@+id/horizontal_line_top"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#0B1F38"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/vertical_line"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="#0B1F38"
                app:layout_constraintBottom_toBottomOf="@id/horizontal_line_bot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/horizontal_line_top" />

            <TextView
                android:id="@+id/textview_logged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"
                android:gravity="center|left"
                android:text="@string/app_name"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/textview_samplecount"
                app:layout_constraintStart_toEndOf="@+id/vertical_line"
                app:layout_constraintTop_toTopOf="@id/horizontal_line_top" />

            <TextView
                android:id="@+id/textview_samplecount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:gravity="center|left"
                android:text="@string/default_samples"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/horizontal_line_bot"
                app:layout_constraintStart_toEndOf="@+id/vertical_line"
                app:layout_constraintTop_toBottomOf="@+id/textview_logged" />

            <View
                android:id="@+id/horizontal_line_bot"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#0B1F38"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="300dp">

            <Button
                android:id="@+id/button_start"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="70dp"
                android:layout_marginRight="70dp"
                android:background="#858181"
                android:text="@string/default_measure"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/button_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="80dp"
                android:background="#99D5D6D6"
                android:text="@string/default_save"
                android:textColor="#385C0E"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_clear"
                app:layout_constraintTop_toBottomOf="@id/button_start" />

            <Button
                android:id="@+id/button_clear"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="80dp"
                android:background="#99D5D6D6"
                android:text="@string/default_clear"
                android:textColor="#880E4F"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_start" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>